--- a/content/openbanking/deutsche-bank/ais-decoupled.mdx
+++ b/content/openbanking/deutsche-bank/ais-decoupled.mdx
@@ -1,8 +1,8 @@
 ---
 templateKey: docs
-title: "Deutsche Bank Account Information Service (AIS) Embedded"
-metaTitle: "Deutsche Bank Account Information Service (AIS) Embedded"
-metaDescription: "API playground for Deutsche Bank Account Information Service (AIS) Embedded"
+title: "Deutsche Bank Account Information Service (AIS) Decoupled"
+metaTitle: "Deutsche Bank Account Information Service (AIS) Decoupled"
+metaDescription: "API playground for Deutsche Bank Account Information Service (AIS) Decoupled"
 aspsp: "deutsche-bank-sandbox"
 psd2Role: "AIS"
 parameters:
