--- a/content/openbanking/deutsche-bank/pis-decoupled.mdx
+++ b/content/openbanking/deutsche-bank/pis-decoupled.mdx
@@ -1,8 +1,8 @@
 ---
 templateKey: docs
-title: "Deutsche Bank Payment Service (PIS)"
-metaTitle: "Deutsche Bank Payment Service (PIS)"
-metaDescription: "API playground for Deutsche Bank Payment Service (PIS)"
+title: "Deutsche Bank Payment Service (PIS) Decoupled"
+metaTitle: "Deutsche Bank Payment Service (PIS) Decoupled"
+metaDescription: "API playground for Deutsche Bank Payment Service (PIS) Decoupled"
 aspsp: "deutsche-bank-sandbox"
 psd2Role: "PIS"
 parameters:
