deutsche-bank test

--- a/content/openbanking/deutsche-bank/test-data-table.mdx
+++ b/content/openbanking/deutsche-bank/test-data-table.mdx
@@ -2,6 +2,4 @@
 templateKey: MdxSnippet
 ---
 
-| PSU ID     | Password |
-|------------|----------|
-| 9999999999 | 9999     |
+Click on the SCA OK button.
