--- a/content/openbanking/otpbank-ro/pis.mdx
+++ b/content/openbanking/otpbank-ro/pis.mdx
@@ -16,6 +16,7 @@ menus:
 
 import StepCreateAccountConsent from 'components/PSD/step-create-account-consent';
 import AuthoriseStep from 'components/PSD/step-authorise';
+import SCAStep from 'components/PSD/step-sca';
 import CreateToken from 'components/PSD/create-token';
 import RefreshToken from 'components/PSD/refresh-token';
 import StepAccounts from 'components/PSD/step-accounts';
@@ -23,32 +24,28 @@ import StepAccount from 'components/PSD/step-account';
 import StepInitiatePayment from 'components/PSD/step-initiate-payment';
 import StepPayment from 'components/PSD/step-payment';
 import StepPaymentStatus from 'components/PSD/step-payment-status';
-
+import AuthorizationBearer from 'components/PSD/AuthorizationBearer';
+import otbBankPISPRequestOverride from './pisp-consent-override.json'
 
 
   <step>
 
+  ## Set PSU Authorization bearer
+
+  <AuthorizationBearer />
+
+  </step>
+  <step>
+
   ## Create a consent
 
-  <StepInitiatePayment/>
+  <StepInitiatePayment requestOverride={otbBankPISPRequestOverride} />
   </step>
-<step>
+  <step>
 
-  ## Authorise consent
+  ## SCA redirect
 
-  <AuthoriseStep/>
-</step>
-<step>
-
-  ## Exchange Token from Code
-
-  <CreateToken/>
-</step>
-<step>
-
-  ## Refresh token
-
-  <RefreshToken/>
+  <SCAStep/>
   </step>
   <step>
 
