--- a/content/openbanking/griffin/ais.mdx
+++ b/content/openbanking/griffin/ais.mdx
@@ -56,6 +56,12 @@ import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
   </step>
   <step>
 
+  ## Refresh token
+
+  <RefreshToken/>
+  </step>
+  <step>
+
   ## Retrieve accounts consent status
 
   <AccountConsentStatus/>
