--- a/content/openbanking/griffin/pis.mdx
+++ b/content/openbanking/griffin/pis.mdx
@@ -54,6 +54,12 @@ import StepSubmitOpenBankingPayment from 'components/PSD/step-ob-submit-payment'
   </step>
   <step>
 
+  ## Refresh token
+
+  <RefreshToken/>
+  </step>
+  <step>
+
   ## Get payment consent
 
   <StepGetPaymentConsent/>
