--- a/content/openbanking/rbs/ais.mdx
+++ b/content/openbanking/rbs/ais.mdx
@@ -29,6 +29,7 @@ import StepSubmitOpenBankingPayment from 'components/PSD/step-ob-submit-payment'
 import StepTransactions from 'components/PSD/step-transactions';
 import AccountConsentStatus from 'components/PSD/step-account-consent-status';
 import StepBalances from 'components/PSD/step-balances';
+import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
 
 
 
@@ -91,4 +92,10 @@ import StepBalances from 'components/PSD/step-balances';
   ## Get account transactions
 
   <StepTransactions/>
+  </step>
+  <step>
+
+  ## Delete account consent
+
+  <DeleteAccountConsent/>
   </step>
