--- a/content/open-banking/atticabank/pis-decoupled.mdx
+++ b/content/open-banking/atticabank/pis-decoupled.mdx
@@ -28,7 +28,7 @@ import StepPaymentStatus from 'components/PSD/step-payment-status';
 import StepPaymentAuthorisations from 'components/PSD/step-payment-authorisations';
 import StepPaymentAuthorisation from 'components/PSD/step-payment-authorisation';
 import StepPaymentPostAuthorisation from 'components/PSD/step-payment-post-authorisation';
-const requestOverride = {
+export const requestOverride = {
   debtorAccount: {
     "iban": "DE45215730140403342900","currency":"EUR"
   }
