--- a/content/open-banking/piraeusbank/ais-specific-accounts.mdx
+++ b/content/open-banking/piraeusbank/ais-specific-accounts.mdx
@@ -26,7 +26,7 @@ import StepAccountConsentAuthorisations from 'components/PSD/step-account-consen
 import StepAccountConsentAuthorisation from 'components/PSD/step-account-consent-authorisation';
 import StepAccountConsentPostAuthorisation from 'components/PSD/step-account-consent-post-authorisation';
 import StepAccountConsentPutAuthorisation from 'components/PSD/step-account-consent-put-authorisation';
-const requestOverride = {
+export const requestOverride = {
   access: {
     accounts: [
       {
