--- a/content/open-banking/atticabank/pis-embedded.mdx
+++ b/content/open-banking/atticabank/pis-embedded.mdx
@@ -30,7 +30,7 @@ import StepPaymentAuthorisations from 'components/PSD/step-payment-authorisation
 import StepPaymentAuthorisation from 'components/PSD/step-payment-authorisation';
 import StepPaymentPostAuthorisation from 'components/PSD/step-payment-post-authorisation';
 import StepPaymentPutAuthorisation from 'components/PSD/step-payment-put-authorisation';
-const requestOverride = {
+export const requestOverride = {
   debtorAccount: {
     "iban": "DE76215730140403343700","currency":"EUR"
   },
