--- a/content/open-banking/unicredit-de/pis-embedded.mdx
+++ b/content/open-banking/unicredit-de/pis-embedded.mdx
@@ -29,7 +29,7 @@ import StepPaymentAuthorisations from 'components/PSD/step-payment-authorisation
 import StepPaymentAuthorisation from 'components/PSD/step-payment-authorisation';
 import StepPaymentPostAuthorisation from 'components/PSD/step-payment-post-authorisation';
 import StepPaymentPutAuthorisation from 'components/PSD/step-payment-put-authorisation';
-const requestOverride = {
+export const requestOverride = {
   debtorAccount: {
     "iban": "DE49700202700123456785"
   }
