--- a/content/open-banking/dskbank/ais.mdx
+++ b/content/open-banking/dskbank/ais.mdx
@@ -23,7 +23,7 @@ import StepTransactions from "components/PSD/step-transactions";
 import DeleteAccountConsent from "components/PSD/step-delete-account-consent";
 import * as moment from "moment";
 import dskbankAISPRequestOverride from './aisp-consent-override.json'
-const transactionsParamsOverride = {
+export const transactionsParamsOverride = {
 }
 
   <step>
