--- a/content/open-banking/ing/pis.mdx
+++ b/content/open-banking/ing/pis.mdx
@@ -24,7 +24,7 @@ import StepAccount from 'components/PSD/step-account';
 import StepInitiatePayment from 'components/PSD/step-initiate-payment';
 import StepPayment from 'components/PSD/step-payment';
 import StepPaymentStatus from 'components/PSD/step-payment-status';
-const request = { instructedAmount: { amount: "1", currency: "EUR" }, creditorAccount: { iban: "AT861921125678901234" }, creditorName: "Laura Musterfrau" }
+// const request = { instructedAmount: { amount: "1", currency: "EUR" }, creditorAccount: { iban: "AT861921125678901234" }, creditorName: "Laura Musterfrau" }
 
 
 
