--- a/content/open-banking/playground/index.mdx
+++ b/content/open-banking/playground/index.mdx
@@ -12,7 +12,8 @@ menus:
 import Playground from "components/PSD/Playground";
 import GetInTouch from "components/GetInTouch";
 import GradientButton from "components/GradientButton";
-import { Link, navigate } from "@reach/router";
+import { Link } from 'components/router';
+import { navigate } from '@reach/router';
 import ArrowForwardIcon from "@material-ui/icons/ArrowForward";
 
 ## How is this working?
