--- a/content/open-banking/bnpparibasfortis/pis.mdx
+++ b/content/open-banking/bnpparibasfortis/pis.mdx
@@ -7,6 +7,8 @@ aspsp: "bnpparibasfortis-sandbox"
 psd2Role: "PIS"
 parameters:
   paymentType: sepa-credit-transfers
+  brand: bnppf
+  businessEntityID: "bnppf"
 menus:
   bnpparibasfortis: 
     weight: 2
