--- a/content/open-banking/cetelem-es/ais.mdx
+++ b/content/open-banking/cetelem-es/ais.mdx
@@ -1,15 +1,12 @@
 ---
 templateKey: docs
-title: "BNP Paribas Fortis Account Information Service (AIS)"
-metaTitle: "BNP Paribas Fortis Account Information Service (AIS)"
-metaDescription: "API playground for BNP Paribas Fortis Account Information Service (AIS)"
-aspsp: "bnpparibasfortis-sandbox"
+title: "Cetelem Bank Account Information Service (AIS)"
+metaTitle: "Cetelem Bank Account Information Service (AIS)"
+metaDescription: "API playground for Cetelem Bank Account Information Service (AIS)"
+aspsp: "cetelem-es-sandbox"
 psd2Role: "AIS"
-parameters:
-  brand: bnppf
-  businessEntityID: "bnppf"
 menus:
-  bnpparibasfortis: 
+  cetelem-es: 
     weight: 1
 ---
 
@@ -19,12 +16,14 @@ import StepCreateAccountConsent from 'components/PSD/step-create-account-consent
 import AuthoriseStep from 'components/PSD/step-authorise';
 import CreateToken from 'components/PSD/create-token';
 import RefreshToken from 'components/PSD/refresh-token';
+import SCAStep from 'components/PSD/step-sca';
 import StepAccounts from 'components/PSD/step-accounts';
 import StepAccount from 'components/PSD/step-account';
 import AccountConsentStatus from 'components/PSD/step-account-consent-status';
-import StepTransactions from 'components/PSD/step-transactions';
 import StepBalances from 'components/PSD/step-balances';
-
+import StepTransactions from 'components/PSD/step-transactions';
+import DeleteAccountConsent from 'components/PSD/step-delete-account-consent';
+import cetelemSpainRequestOverride from './aisp-consent-override.json';
 
 
 
@@ -40,7 +39,6 @@ import StepBalances from 'components/PSD/step-balances';
   ## Exchange Token from Code
 
   <CreateToken/>
-  Now, we need to turn that access code into an access token, by having our server make a request to your token endpoint
   </step>
   <step>
 
@@ -50,9 +48,33 @@ import StepBalances from 'components/PSD/step-balances';
   </step>
   <step>
 
+  ## Create a consent
+
+  <StepCreateAccountConsent requestOverride={cetelemSpainRequestOverride} />
+  </step>
+  <step>
+
+  ## SCA redirect
+
+  <SCAStep/>
+  </step>
+  <step>
+
+  ## Retrieve accounts consent status
+
+  <AccountConsentStatus/>
+  </step>
+  <step>
+
   ## Retrieve list of accounts
 
   <StepAccounts/>
+  </step>
+  <step>
+
+  ## Get account data
+
+  <StepAccount/>
   </step>
   <step>
 
@@ -65,5 +87,11 @@ import StepBalances from 'components/PSD/step-balances';
   ## Get account transactions
 
   <StepTransactions/>
+  </step>
+  <step>
+
+  ## Delete account consent
+
+  <DeleteAccountConsent/>
   </step>
 
