--- a/content/open-banking/abnamro/ais.mdx
+++ b/content/open-banking/abnamro/ais.mdx
@@ -13,6 +13,7 @@ menus:
 
 
 import StepCreateAccountConsent from 'components/PSD/step-create-account-consent';
+import AuthorisationUrlStep from 'components/PSD/step-authorisation-url';
 import AuthoriseStep from 'components/PSD/step-authorise';
 import CreateToken from 'components/PSD/create-token';
 import RefreshToken from 'components/PSD/refresh-token';
@@ -29,6 +30,12 @@ import StepBalances from 'components/PSD/step-balances';
 
 
 
+  <step>
+
+  ## Authorisation url
+
+  <AuthorisationUrlStep/>
+  </step>
   <step>
 
   ## Create a consent
