--- a/content/open-banking/deutsche-bank/ais-corporate.mdx
+++ b/content/open-banking/deutsche-bank/ais-corporate.mdx
@@ -7,7 +7,7 @@ aspsp: "deutsche-bank-sandbox"
 psd2Role: "AIS"
 parameters:
   country: EU
-  businessEntityID: "SB-Corporate"
+  businessEntityID: "Corporate"
   psuID: "max.musterman05"
   psuIDType: "WebSSO"
   corporateID: "max.musterman_corp_05"
