--- a/content/open-banking/deutsche-bank/pis-embedded.mdx
+++ b/content/open-banking/deutsche-bank/pis-embedded.mdx
@@ -8,7 +8,7 @@ psd2Role: "PIS"
 parameters:
   paymentType: sepa-credit-transfers
   country: DE
-  businessEntityID: "SB-DB"
+  businessEntityID: "DB"
   psuID: "6154033437"
   psuIDType: "DE_ONLB_DB"
   encryptedPassword: "PISPWD12"
