--- a/content/open-banking/tesco/test-data-table.mdx
+++ b/content/open-banking/tesco/test-data-table.mdx
@@ -2,12 +2,34 @@
 templateKey: MdxSnippet
 ---
 
-The password for all mock accounts is **Password123**.
+To help simulate users of your app, you can use the static test data below. This includes a range of customer accounts, covering high, low and overdrawn balances as well as different spending profiles.
 
-|Brand|Retail|Commercial|Business|
-|--- |--- |--- |--- |
-|Lloyds Bank|llr001|llc001|llb001|
-|Halifax|har001|N/A|N/A|
-|Bank of Scotland|bar001|bac001|bab001|
-|MBNA|mbr001|N/A|N/A|
+[Summary of test data (pdf, 300KB)](https://www.tescobank.com/assets/tpp-test-customer-data/tpp-test-customer-data.pdf)
+
+*Users:*
+
+Customer 1:
+- PSD2TPP1
+
+Customer 2 & 3:
+- 2 - PSD2TPP2
+- 3 - PSD2TPP3 and PSD2TPP3A
+
+Customer 4 & 5:
+- 4 - PSD2TPP4
+- 5 - PSD2TPP5
+
+Customer 8:
+- PSD2TPP8
+
+Customer 9:
+- PSD2TPP9
+
+Customer 14, 15 & 16:
+- 14 - PSD2TPP14
+- 15 - PSD2TPP15
+- 16 - PSD2TPP16
+
+Customer 17:
+- PSD2TPP17
 
