--- a/content/open-banking/deutsche-bank/ais-decoupled.mdx
+++ b/content/open-banking/deutsche-bank/ais-decoupled.mdx
@@ -7,7 +7,7 @@ aspsp: "deutsche-bank-sandbox"
 psd2Role: "AIS"
 parameters:
   country: DE
-  businessEntityID: "SB-DB"
+  businessEntityID: "DB"
   psuID: "6154033429"
   psuIDType: "DE_ONLB_DB"
   encryptedPassword: "PISPWD12"
