test users text

--- a/content/open-banking/test-users.mdx
+++ b/content/open-banking/test-users.mdx
@@ -12,5 +12,8 @@ menus:
 
 import TestUsersSection from 'components/TestUsersSection';
 
+A list of credentials for testing Open Banking API's with institution's sandboxes.
+
+You can simulate your user's consent using the sandbox banks.
 
 <TestUsersSection />
